# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Erik Tjong Kim Sang
author_email = e.tjongkimsang@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = 
long_description = file: README.md
long_description_content_type = text/markdown
name = notebooks
project_urls =
    Bug Tracker = https://github.com/puregome/notebooks/issues
url = https://github.com/puregome/notebooks
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages =
    notebooks
install_requires =

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    prospector[with_pyroma]
    yapf
    isort
    pytest
    pytest-cov
    pycodestyle
    docutils
    pytest-runner
    sphinx
    sphinx_rtd_theme
    recommonmark
publishing = 
    twine
    wheel

[coverage:run]
branch = True
source = notebooks

[tool:isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = notebooks
src_paths = notebooks,tests
line_length = 120

[tool:pytest]
testpaths = tests
# Note that visual debugger in some editors like pycharm gets confused by coverage calculation.
# As a workaround, configure the test configuration in pycharm et al with a --no-cov argument
addopts = --cov --cov-report xml --cov-report term --cov-report html
